--- a/main.css
+++ b/main.css
@@ -12,8 +12,85 @@
 
 *{
     font-family: Din_Bold;
+    color:#fefefe;
+    background-color: #323232;
+}
+#header{
+    background: #484848 ;
+    height: 80px;
+    width: 100%;
+    padding: 5px;
+    margin: 20px 0px;
+    overflow: hidden;
 }
 #logo{
     width: 200px;
-    height: 57px;
+    float: left;
+    margin-top: 10px;
+    margin-left: 20px;
+    background-color: #fefefe;
+}
+#menu{
+    float: right;
+    list-style: none;
+    background-color: #484848;
+}
+#menu li{
+    background-color: #484848;
+    float: left;
+    padding: 14px 20px;
+}
+#menu li a{
+    text-decoration: none;
+    color: #d1d1d1;
+    background-color: #484848;
+}
+#home{
+    justify-items: center;
+}
+#hero{
+    width: 820px;
+    background-color: #fefefe;
+}
+#content{
+    margin: 0 80px 0 80px;
+}
+#steam_icon
+{
+    width: 300px;
+    float: right;
+}
+#Games{
+    background-color: #000000dd;
+}
+#Games_List{
+    display: flex;
+    margin: 20px 60px 20px 60px;
+    max-width: 60%;
+    flex-wrap: wrap;
+    justify-self: center;
+}
+.Game_item{
+    background-color: #24242460;
+    border-radius: 16px;
+    margin: 16px;
+    text-wrap: wrap;
+    width: 320px;
+    height: 4%;
+    overflow: hidden;
+    filter: brightness(65%);
+}
+.Game_item:hover{
+    scale: 110%;
+    filter: brightness(100%);
+}
+.Game_item a{
+    background-color: #00000000;
+    text-decoration: none;
+    width: 100%;
+    height: 100%;
+}
+.Game_title{
+    text-align: center;
+    background: none;
 }
