--- a/main.css
+++ b/main.css
@@ -6,5 +6,28 @@
 *{
     font-family: din_bold;
     color: #fefefe;
-    background-color: #505050;
+    background-color: #242424;
+}
+
+#header{
+    background-color: #101010;
+    padding: 10px;
+    width: 100%;
+    height: 120px;
+    overflow: hidden;
+}
+#logo{
+    height: 60px;
+    margin-top: 10px;
+    background-color: #fefefe;
+    float:left
+}
+#menu{
+    margin: 20px;
+    list-style: none;
+}
+#menu li{
+    float: right;
+    padding: 8px 20px;
+    background-color: #101010;
 }
