--- a/main.css
+++ b/main.css
@@ -6,28 +6,100 @@
 *{
     font-family: din_bold;
     color: #fefefe;
-    background-color: #242424;
+}
+#content{
+    width:100%;
+    margin: 0px;
+}
+body{
+    margin: 0px;
+    background-color: #171a21;
 }
 
+
+/*-----------------------------------------------*/
 #header{
-    background-color: #101010;
-    padding: 10px;
-    width: 100%;
-    height: 120px;
+    display: flexbox;
+    background-color: #f74641;
+    padding: 8px;
+    position: fixed;
+    height: 80px;
+    width:100%;
+    top: 0px;
+    left: 0px;
     overflow: hidden;
+    justify-items: center;
+    z-index: 10;
 }
 #logo{
-    height: 60px;
-    margin-top: 10px;
-    background-color: #fefefe;
-    float:left
+    background-color: #ededed;
+    height: 55%;
+    justify-self: center;
 }
 #menu{
-    margin: 20px;
+    margin-bottom: 5px;
+    display: flex;
+    justify-self: center;
     list-style: none;
 }
 #menu li{
+   margin: 0px 25px 0px 25px;
+}
+#menu li a{
+    text-align: center;
+    text-decoration: none;
+}
+#menu li  :hover{
+    text-decoration: underline;
+}
+
+
+
+/*-----------------------------------------------*/
+#home{
+    height: 1000px;
+    justify-items: center;
+    justify-content: center;
+    overflow: hidden;
+    margin-top: 100px;
+    background-color: #171a21;
+    background-image: url(Assets/Images/valve_team.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-blend-mode: multiply;
+}
+#hero{
+    background-color: #ededed;
+    margin: 180px 0px 0px 0px;
+}
+#home h1{
+    text-align: center;
+}
+
+
+
+/*-----------------------------------------------*/
+#about{
+    display: flex;
+    padding: 0px;
+    margin: 80px;
+    background-color: #171a21;
+}
+#about .head{
+    width: 100%;
+}
+#about .Content{
+    float: left;
+    width: 60%;
+}
+#winner{
+    width: 40%; 
     float: right;
-    padding: 8px 20px;
-    background-color: #101010;
+    margin: 10px;
+}
+
+/*-----------------------------------------------*/
+#Steam{
+    background-color: #214d6f;
+    display: block;
 }
